# discgolfspider

./: .gitignore  README.md  README.rst  justfile  pyproject.toml  scrapy.cfg
.github/workflows/: main.yml
discgolfspider/: crawl_scheduler.py  discinstock_api.py  items.py  main.py  middlewares.py  pipelines.py  settings.py
discgolfspider/helpers/: brand_helper.py  debug.py  flightspec_suggester.py  retailer_id.py  shopify.py
discgolfspider/migrations/: V1__Retailer_id.js
discgolfspider/spiders/: aceshop_spider.py  bogeyshop_spider.py  bouncebackbirdie_spider.py  chicks_with_discs_spider.py  dgshop_spider.py  discgolf_wheelie_spider.py  discgolfdynasty_spider.py  discoverdiscs_spider.py  discshopen_spider.py  discsjappa_spider.py  discsor_spider.py  frisbeebutikken_spider.py  frisbeefeber_spider.py  frisbeesor_spider.py  golfdiscer_spider.py  golfkongen_spider.py  guru_spider.py  kastmeg_spider.py  krokholdgs_spider.py  prodisc_spider.py  sendeskive_spider.py  spinnvilldg_spider.py  starframe_spider.py  tbksport_spider.py  wearediscgolf_spider.py
docker/: Dockerfile  docker-entrypoint.sh
src/discgolfspider/: main.py  middlewares.py  pipelines.py  settings.py
src/discgolfspider/spiders/: discgolfdynasty_spider.py  frisbeesor_spider.py  krokholdgs_spider.py
tests/: test_discgolfspider.py
