[tool.poetry]
name = "discgolfspider"
version = "1.6.4"
description = "A spider that fetches information about golf discs on different norwegian online discgolf retailers"
authors = ["Sondre William Kaldhussæter-Knutsen <knutsensondre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
requests = "^2.26.0"
python-dotenv = "^0.21.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = ">=21.9b0"

[tool.poetry.scripts]
crawl = "discgolfspider.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 105
