[tool.poetry]
name = "discgolfspider"
version = "1.8.1"
description = "A spider that fetches information about golf discs on different norwegian online discgolf retailers"
authors = ["Sondre William Kaldhussæter-Knutsen <knutsensondre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
requests = "^2.26.0"
python-dotenv = "^0.21.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
crawl = "discgolfspider.main:start"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "ERA", "F", "C", "B"]
