[project]
authors = [
    {name = "Sondre William Kaldhussæter-Knutsen", email = "knutsensondre@gmail.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "Scrapy==2.11.1",
    "requests<3.0.0,>=2.26.0",
    "python-dotenv==1.0.1",
    "pyfiglet<1.0.0,>=0.8.post1",
    "cryptography==42.0.5",
]
name = "discgolfspider"
version = "1.10.5"
description = "A spider that fetches information about golf discs on different norwegian online discgolf retailers"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "ERA", "F", "C", "B"]